@@ -1,6 +1,4 @@
-# project
+# SOFTENG 206 Assignment 3
 
-Use this repo for both Assignment 3 and also your final Project (as you will be in the same team). 
-
-Be sure to update this README file to provide an easy-to-follow set of instructions on how to run your program. 
-
+Please use this command in the terminal to run Jeopardy.jar:
+java -jar --module-path /home/se2062020/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.media,javafx.base,javafx.fxml Quinzical.jar
